hphp/test/slow/readonly/prop_cow.php.expectf
Fatal error: Uncaught exception 'ReadonlyViolationException' with message 'Readonly collections cannot be modified.' in %s/prop_cow.php:18
%A
